2019-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/animate.c (MagickXAnimateImages): Fix memory leak of
	scene_info.pixels.

	* magick/display.c (MagickXDisplayImage): Fix heap overwrite of
	windows->image.name and windows->image.icon_name buffers.  It
	appears that the code assumed that CloneString() would always
	allocated a string at least MaxTextExtent in size. I assume that
	this issue has existed for a very long time since CloneString()
	was re-written many years ago.

	* coders/caption.c (ReadCAPTIONImage): The CAPTION reader did not
	appear to work at all any more.  Now it works again, but still not
	very well.

	* magick/command.c: Re-implement '@' file inclusion support for
	-comment, -draw, -format, and -label which was removed for the
	1.3.32 release.  Note that arguments from untrusted sources will
	still need to be sanitized to detect attempts to subvert this
	feature to access file data, but this feature has always been
	supported by GraphicsMagick and it originated early in the
	development of ImageMagick.

2019-06-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (MagickStrlCat, MagickStrlCpy): Add debug
	checks enabled by MAGICK_STRL_CHECK.

	* magick/montage.c (MontageImages): Fix wrong length argument to
	strlcat() when building montage directory, which could allow heap
	overwrite.

	* coders/png.c (RegisterPNGImage): Pass correct size value to
	strlcat().  Under Apple's OS X (and possibly other targets)
	strlcat() writes bytes beyond what it needs to (but within the
	range it is allowed to) causing a crash due to the wrong limit
	value.  Fixes SourceForge issue #609 `gm identify foo.png` crashes
	on macOS (v 1.3.32).

	* www/Changes.rst: Update ChangeLog links due to new year, and
	1.3.32 release.

2019-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (WriteBMPImage): Detect arithmetic overflow of
	image_size. Add more tracing. Reduce compilation warnings.