@@ -38,6 +38,9 @@
 <p>2019-06-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/render.c (DrawImage): Assure that 'token' is initialized.
+Fixes oss-fuzz issue 14897 &quot;graphicsmagick/coder_MVG_fuzzer:
+Use-of-uninitialized-value in DrawImage&quot;.</li>
 <li>magick/animate.c (MagickXAnimateImages): Fix memory leak of
 scene_info.pixels.</li>
 <li>magick/display.c (MagickXDisplayImage): Fix heap overwrite of
